--- a/Login Page/Login Form.html
+++ b/Login Page/Login Form.html
@@ -25,7 +25,7 @@
           />
           <label for="loginPassword">Password</label>
         </div>
-        <a class="submit-btn" href="file:///D:/SmartEdu/Edu/home.html">Log in</a>
+        <a class="submit-btn" href="index.html">Log in</a>
       </form>
     </div>
   </body>
