--- a/Info/haa.html
+++ b/Info/haa.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <ul>
-    <li class="nav-links" id="dots"><a href="index.html"><img src="home.png"></a></li>
+    <li class="nav-links" id="dots"><a href="https://github.com/Frostor24/ATL-MARATHON/blob/0c03c2f86cc629163b0221599fe145dc68b6db5b/index.html"><img src="home.png"></a></li>
     </ul>
     <h1>Smart Edu</h1>
     <br>
