--- a/Login Page/Login Form.html
+++ b/Login Page/Login Form.html
@@ -25,7 +25,7 @@
           />
           <label for="loginPassword">Password</label>
         </div>
-        <a class="submit-btn" href="index.html">Log in</a>
+        <a class="submit-btn" href="https://github.com/Frostor24/ATL-MARATHON/blob/0c03c2f86cc629163b0221599fe145dc68b6db5b/index.html">Log in</a>
       </form>
     </div>
   </body>
